--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,15 +10,16 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.Messenger">
         <activity android:name=".SearchActivity"></activity>
-        <activity android:name=".FirstPage">
+        <activity android:name=".LoginActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity android:name=".ChatActivity" />
         <activity android:name=".MainActivity" />
-        <activity android:name=".LoginActivity" />
+        <activity android:name=".FirstPage" />
         <activity android:name=".ProfileActivity" />
     </application>
 
